# atxpkg

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  Justfile  Makefile  Pipfile  README.md  add_to_path.bat  atxpkg  atxpkg.go  atxpkg.py  atxpkg.sh  atxpkg_backup  atxpkg_test.go  compile.bat  compile.sh  compile_docker.sh  compile_win.sh  go.mod  go.sum  install.bat  merge_dist.sh  mkpkg  repos.txt  requirements.txt  setup.py  setup_win.py  test  test.py  utils.go  utils.py  utils_test.go  vagcompile.sh  version.go  version.py
.cargo/: config.toml
.github/workflows/: security-audit.yml
pkg_data/atxpkg/: add_to_path.bat  update_self.sh
src/: lib.rs
tests/: tests.rs
