[package]
name = "atxpkg"
version = "10.5.0"
edition = "2021"
rust-version = "1.77"
license = "PROPRIETARY"
authors = ["Radek Podgorny <radek@podgorny.cz>"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
filetime = "0.2.25"
hex = "0.4.3"
indicatif = "0.17.11"
itertools = "0.14.0"
lazy-regex = "3.4.1"
log = "0.4.26"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.15", features = ["blocking", "native-tls-vendored", "rustls-tls"] }
scoped_threadpool = "0.1.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"
tempfile = "3.19.0"
time = { version = "0.3.40", features = ["local-offset", "macros"] }
walkdir = "2.5.0"
zip = { version = "2.4.2", features = ["time"] }

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
