[package]
name = "atxpkg"
version = "10.7.0"
edition = "2021"
rust-version = "1.77"
license = "PROPRIETARY"
authors = ["Radek Podgorny <radek@podgorny.cz>"]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.48", features = ["derive"] }
filetime = "0.2.26"
hex = "0.4.3"
indicatif = "0.18.0"
itertools = "0.14.0"
lazy-regex = "3.4.1"
log = "0.4.28"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
md-5 = "0.10.6"
reqwest = { version = "0.12.23", features = ["blocking", "native-tls-vendored", "rustls-tls"] }
scoped_threadpool = "0.1.9"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
simplelog = "0.12.2"
tempfile = "3.22.0"
time = { version = "0.3.41", features = ["local-offset", "macros"] }
walkdir = "2.5.0"
zip = { version = "4.2.0", features = ["time"] }

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
